# MCP-ProjectManager

./: .coverage  .cursorignore  .flake8  .gitignore  .gitmodules  .npmignore  .pre-commit-config.yaml  AEROSPACE_GRADE_DOCUMENTATION.md  AGENTS.MD  ARCHITECTURE.md  AUTH_SETUP.md  BACKEND_FRONTEND_ALIGNMENT_REPORT.md  BRAND_ASSETS_GUIDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_TOKENS.md  DEV_LAUNCHER_COMPLETE.md  DEV_LAUNCHER_GUIDE.md  DEV_SCRIPTS.md  ENVIRONMENT_SETUP.md  LICENSE  Makefile  ONBOARDING.md  PROJECT_PROGRESS_TRACKER.md  PROMETHEUS_GRAFANA_SETUP.md  README.md  SCRIPTS_CLEANUP_SUMMARY.md  SYSTEM_GUIDE.md  TEST_ENHANCEMENT_REPORT.md  TEST_FIX_SUMMARY.md  THE_BUILDERS_COMPLETION_REPORT.md  USAGE_EXAMPLES.md  USER_FLOWS.md  check_db.py  cli.js  crop_logo.py  data.json  dev_launcher.bat  dev_launcher.js  (+35 more)
backend/: .coverage  .env  .env.example  2.0.0  README.md  REFACTORING_COMPLETE.md  __init__.py  alembic.ini  analyze_async_issues.py  app_factory.py  app_middleware.py  app_start.py  auth.py  check_routes.py  complete_enhanced_app.py  comprehensive_flake8_fixer.py  comprehensive_indent_fix.py  config.py  crud.py  database.py  db_check.py  debug_tables.py  debug_test_db.py  dev_start.py  diagnostic.py  enhanced_app.py  enhanced_app_routes.py  enums.py  fix_all_indentation.py  fix_app_emojis.py  fix_comprehensive_flake8.py  fix_conftest.py  fix_enums.py  fix_env.py  fix_flake8.py  fix_forward_refs.py  fix_imports.py  fix_indentation.py  fix_line.py  fix_mcp_indentation.py  (+52 more)
backend/alembic/: README.md  env.py
backend/config/: README.md  (+6 more)
(+1176 files in other folders)
